@@ -1,7 +1,6 @@
 
-/*  A Bison parser, made from ../../htdig3/htcommon/conf_parser.yxx
- by  GNU Bison version 1.27
-  */
+/*  A Bison parser, made from ../../htdig-3.2/htcommon/conf_parser.yxx
+    by GNU Bison version 1.28  */
 
 #define YYBISON 1  /* Identify Bison output.  */
 
@@ -28,7 +27,7 @@
 // or the GNU Public License version 2 or later
 // <http://www.gnu.org/copyleft/gpl.html>
 //
-// $Id: conf_parser.cxx,v 1.1.2.6 2000/02/23 16:55:59 loic Exp $
+// $Id: conf_parser.cxx,v 1.1.2.7 2000/04/09 18:17:23 ghutchis Exp $
 //
 
 /* Bison version > 1.25 needed */
@@ -65,7 +64,7 @@ typedef union {
 
 
 
-#define	YYFINAL		32
+#define	YYFINAL		33
 #define	YYFLAG		-32768
 #define	YYNTBASE	12
 
@@ -104,7 +103,7 @@ static const char yytranslate[] = {     0,
 #if YYDEBUG != 0
 static const short yyprhs[] = {     0,
      0,     1,     4,     6,     8,    13,    18,    23,    27,    29,
-    42,    44,    47,    50
+    42,    44,    47,    50,    53
 };
 
 static const short yyrhs[] = {    -1,
@@ -113,7 +112,7 @@ static const short yyrhs[] = {    -1,
      5,     0,    10,     4,     5,     0,     5,     0,     7,    10,
      4,     9,     6,     5,    16,     7,     8,    10,     6,     5,
      0,    14,     0,    16,    14,     0,     9,     9,     0,    17,
-     9,     0
+     9,     0,    17,    11,     0
 };
 
 #endif
@@ -121,7 +120,7 @@ static const short yyrhs[] = {    -1,
 #if YYDEBUG != 0
 static const short yyrline[] = { 0,
     52,    53,    56,    68,    76,    86,    92,    98,   106,   109,
-   130,   148,   162,   175
+   130,   148,   162,   175,   187
 };
 #endif
 
@@ -137,54 +136,54 @@ static const char * const yytname[] = {   "$","error","$undefined.","NUM","T_DEL
 
 static const short yyr1[] = {     0,
     12,    12,    13,    13,    14,    14,    14,    14,    14,    15,
-    16,    16,    17,    17
+    16,    16,    17,    17,    17
 };
 
 static const short yyr2[] = {     0,
      0,     2,     1,     1,     4,     4,     4,     3,     1,    12,
-     1,     2,     2,     2
+     1,     2,     2,     2,     2
 };
 
 static const short yydefact[] = {     1,
      0,     9,     0,     0,     2,     3,     4,     0,     0,     0,
      8,     0,     0,     0,     0,     5,    13,     6,     7,    14,
-     0,     0,    11,     0,     0,    12,     0,     0,     0,    10,
-     0,     0
+    15,     0,     0,    11,     0,     0,    12,     0,     0,     0,
+    10,     0,     0
 };
 
 static const short yydefgoto[] = {     1,
-     5,     6,     7,    24,    14
+     5,     6,     7,    25,    14
 };
 
 static const short yypact[] = {-32768,
-     0,-32768,    -6,     9,-32768,-32768,-32768,    14,    -3,    12,
--32768,    10,    17,    11,    18,-32768,-32768,-32768,-32768,-32768,
-    20,     7,-32768,     4,    15,-32768,    16,    21,    23,-32768,
-    29,-32768
+     0,-32768,    -6,    15,-32768,-32768,-32768,    16,    -3,    12,
+-32768,    13,    18,     4,    19,-32768,-32768,-32768,-32768,-32768,
+-32768,    21,     6,-32768,     7,    20,-32768,    14,    23,    22,
+-32768,    30,-32768
 };
 
 static const short yypgoto[] = {-32768,
--32768,   -21,-32768,-32768,-32768
+-32768,   -22,-32768,-32768,-32768
 };
 
 
-#define	YYLAST		29
+#define	YYLAST		30
 
 
-static const short yytable[] = {    31,
-    23,    11,    26,     8,     2,    12,     3,    13,     2,     4,
-    25,     2,     9,     4,    16,    19,     4,    10,    17,    20,
-    15,    18,    27,    21,    22,    28,    29,    30,    32
+static const short yytable[] = {    32,
+    24,    11,    27,     8,     2,    12,     3,    13,    19,     4,
+     2,     2,    20,    26,    21,     4,     4,    16,     9,    10,
+    15,    17,    18,    29,    22,    23,    31,    28,    30,    33
 };
 
 static const short yycheck[] = {     0,
-    22,     5,    24,    10,     5,     9,     7,    11,     5,    10,
-     7,     5,     4,    10,     5,     5,    10,     4,     9,     9,
-     9,     5,     8,     6,     5,    10,     6,     5,     0
+    23,     5,    25,    10,     5,     9,     7,    11,     5,    10,
+     5,     5,     9,     7,    11,    10,    10,     5,     4,     4,
+     9,     9,     5,    10,     6,     5,     5,     8,     6,     0
 };
 /* -*-C-*-  Note some compilers choke on comments on `#line' lines.  */
 
-/* This file comes from bison-1.27.  */
+/* This file comes from bison-1.28.  */
 
 /* Skeleton output parser for bison,
    Copyright (C) 1984, 1989, 1990 Free Software Foundation, Inc.
@@ -763,7 +762,7 @@ case 5:
     break;}
 case 6:
 { 
-	  // max_head_lenght: 300000
+	  // max_head_length: 300000
 	  //
 	                                yyval.ConfLine=new ConfigDefaults;
 					yyval.ConfLine->name = yyvsp[-3].str; yyval.ConfLine->value=yyvsp[-1].str;
@@ -861,6 +860,20 @@ case 13:
     break;}
 case 14:
 { 
+		char *old=yyval.str;
+		if ((yyval.str=new char [strlen(yyval.str)+strlen(yyvsp[0].str)+1+1])==NULL) {
+		  fprintf(stderr,"Can't reallocate memory\n");
+		  exit(1);
+		}
+		strcpy(yyval.str,old);
+		delete [] old;
+		strcat(yyval.str," ");
+		strcat(yyval.str,yyvsp[0].str);
+		delete [] yyvsp[0].str;
+	;
+    break;}
+case 15:
+{
 		char *old=yyval.str;
 		if ((yyval.str=new char [strlen(yyval.str)+strlen(yyvsp[0].str)+1+1])==NULL) {
 		  fprintf(stderr,"Can't reallocate memory\n");
