@@ -11,7 +11,7 @@
 // or the GNU Public License version 2 or later
 // <http://www.gnu.org/copyleft/gpl.html>
 //
-// $Id: conf_parser.yxx,v 1.1.2.5 2000/02/21 23:17:12 grdetil Exp $
+// $Id: conf_parser.yxx,v 1.1.2.6 2000/04/09 18:17:23 ghutchis Exp $
 //
 
 /* Bison version > 1.25 needed */
@@ -84,7 +84,7 @@ simple_expression:      T_KEYWORD T_DELIMITER T_STRING T_NEWLINE	{
 					}
 
 	| T_KEYWORD T_DELIMITER T_NUMBER T_NEWLINE	{ 
-	  // max_head_lenght: 300000
+	  // max_head_length: 300000
 	  //
 	                                $$=new ConfigDefaults;
 					$$->name = $1; $$->value=$3;
@@ -173,6 +173,18 @@ list:	  T_STRING T_STRING			{
 	}
 
 	| list T_STRING			{ 
+		char *old=$$;
+		if (($$=new char [strlen($$)+strlen($2)+1+1])==NULL) {
+		  fprintf(stderr,"Can't reallocate memory\n");
+		  exit(1);
+		}
+		strcpy($$,old);
+		delete [] old;
+		strcat($$," ");
+		strcat($$,$2);
+		delete [] $2;
+	}
+	| list T_NUMBER		{
 		char *old=$$;
 		if (($$=new char [strlen($$)+strlen($2)+1+1])==NULL) {
 		  fprintf(stderr,"Can't reallocate memory\n");
