@@ -1,3 +1,10 @@
+Sun Apr  9 15:21:12 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>
+
+	* htcommon/conf_parser.yxx (list): Fix problem with
+	build_select_lists--parser didn't support lists including numbers.
+
+	* htcommon/conf_parser.cxx: Regenerate using bison.
+
 Sun Apr  9 12:53:02 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htdoc/RELEASE.html: Add a first draft of 3.2.0b2 release notes.
